2008-11-13  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Set printer-uri
	attribute instead of job-uri attribute.

2008-11-12  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection): Store thread state in Connection
	data.
	(Connection_begin_allow_threads): Save current thread state.
	(Connection_end_allow_threads): Restore current thread state.
	(Connection_init): Use new functions.
	(Connection_getPPDs): Likewise.
	(Connection_getServerPPD): Likewise.
	(Connection_getDocument): Likewise.
	(Connection_getDevices): Likewise.

2008-08-28  Tim Waugh  <tim@localhost.localdomain>

	* cupsconnection.c (Connection_methods): Documentation fix for
	getJobAttributes.

2008-08-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobAttributes): New parameter
	requested_attributes.

2008-08-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (get_requested_attrs): New function for
	extracting requested attributes from list.
	(free_requested_attrs): Deallocate memory.
	(Connection_getPrinterAttributes): Use get/free_requested_attrs.

2008-08-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Support limit and
	first-job-id attributes (trac #1).

2008-07-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Return all attributes,
	not just a selection.

2008-07-14  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.41.

2008-07-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_putFile): Allow destination to be a
	file descriptor or a Python file object, and call cupsPutFd() in
	those cases.

2008-07-09  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Fixed
	requested_attributes parameter.

2008-06-20  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.40.

2008-06-20  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Attribute_repr): New method.
	(cups_AttributeType): Set repr function.
